@@ -5,10 +5,12 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.concurrent.CompletableFuture;
 import java.util.stream.Stream;
 
+import com.google.common.base.Strings;
 import com.google.common.io.MoreFiles;
 import com.google.inject.Inject;
 import com.google.inject.Injector;
@@ -23,8 +25,6 @@ import de.prob2.ui.internal.DisablePropertyController;
 import de.prob2.ui.internal.FXMLInjected;
 import de.prob2.ui.internal.I18n;
 import de.prob2.ui.internal.StageManager;
-import de.prob2.ui.internal.executor.CliTaskExecutor;
-import de.prob2.ui.layout.FontSize;
 import de.prob2.ui.menu.ExternalEditor;
 import de.prob2.ui.menu.RevealInExplorer;
 import de.prob2.ui.prob2fx.CurrentProject;
@@ -32,22 +32,19 @@ import de.prob2.ui.prob2fx.CurrentTrace;
 import de.prob2.ui.project.machines.Machine;
 import de.prob2.ui.sharedviews.CheckingViewBase;
 import de.prob2.ui.sharedviews.DescriptionView;
-import de.prob2.ui.verifications.CheckedIcon;
+import de.prob2.ui.verifications.CheckingExecutors;
 import de.prob2.ui.verifications.ExecutionContext;
 
 import javafx.application.Platform;
 import javafx.beans.binding.Bindings;
 import javafx.beans.binding.BooleanBinding;
-import javafx.beans.property.SimpleStringProperty;
-import javafx.beans.value.ChangeListener;
-import javafx.collections.FXCollections;
+import javafx.beans.binding.StringBinding;
+import javafx.beans.value.ObservableValue;
+import javafx.collections.ObservableList;
 import javafx.fxml.FXML;
-import javafx.scene.Node;
 import javafx.scene.control.Alert;
 import javafx.scene.control.MenuButton;
 import javafx.scene.control.MenuItem;
-import javafx.scene.control.ProgressBar;
-import javafx.scene.control.ProgressIndicator;
 import javafx.scene.control.SeparatorMenuItem;
 import javafx.scene.control.SplitPane;
 import javafx.scene.control.TableColumn;
@@ -55,6 +52,7 @@ import javafx.scene.control.TextInputDialog;
 import javafx.scene.control.Tooltip;
 import javafx.stage.DirectoryChooser;
 import javafx.stage.FileChooser;
+import javafx.util.Duration;
 
 import static de.prob2.ui.sharedviews.DescriptionView.getTraceDescriptionView;
 
@@ -63,11 +61,24 @@ import static de.prob2.ui.sharedviews.DescriptionView.getTraceDescriptionView;
 public final class TraceReplayView extends CheckingViewBase<ReplayTrace> {
 	private final class Row extends RowBase {
 		private Row() {
-			itemProperty().addListener((o, from, to) -> {
-				if (to != null) {
-					setTooltip(new Tooltip(this.getItem().getLocation().toString()));
+			// tooltip with path and description
+			ObservableValue<Path> location = this.itemProperty().map(ReplayTrace::getLocation);
+			ObservableValue<String> description = this.itemProperty()
+					.flatMap(ReplayTrace::loadedTraceProperty)
+					.map(TraceJsonFile::getDescription);
+			StringBinding tooltipText = Bindings.createStringBinding(() -> {
+				String s = Objects.toString(location.getValue(), "");
+				String d = description.getValue();
+				if (!Strings.isNullOrEmpty(d)) {
+					s += "\n" + d;
 				}
-			});
+
+				return s;
+			}, location, description);
+			Tooltip tt = new Tooltip();
+			tt.textProperty().bind(tooltipText);
+			tt.setShowDelay(Duration.millis(200));
+			this.tooltipProperty().bind(Bindings.when(tooltipText.isEmpty()).then((Tooltip) null).otherwise(tt));
 
 			executeMenuItem.setText(i18n.translate("animation.tracereplay.view.contextMenu.replayTrace"));
 			editMenuItem.setText(i18n.translate("animation.tracereplay.view.contextMenu.editId"));
@@ -78,24 +89,29 @@ public final class TraceReplayView extends CheckingViewBase<ReplayTrace> {
 			final MenuItem addTestsItem = new MenuItem(i18n.translate("animation.tracereplay.view.contextMenu.editTrace"));
 			addTestsItem.setOnAction(event -> {
 				TraceTestView traceTestView = injector.getInstance(TraceTestView.class);
-				traceTestView.loadReplayTrace(this.getItem());
+				traceTestView.loadReplayTrace(currentProject.get(), currentProject.getCurrentMachine(), this.getItem());
 				traceTestView.show();
 			});
 
 			final MenuItem showStatusItem = new MenuItem(i18n.translate("animation.tracereplay.view.contextMenu.showStatus"));
 			showStatusItem.setOnAction(event -> {
-				ReplayedTraceStatusAlert alert = new ReplayedTraceStatusAlert(injector, this.getItem());
-				alert.show();
+				ReplayedTraceStatusAlert alert = injector.getInstance(ReplayedTraceStatusAlert.class);
+				alert.initReplayTrace(this.getItem());
+				alert.showAndWait().ifPresent(buttonType -> {
+					if (buttonType.equals(alert.getAcceptButtonType())) {
+						currentTrace.set(this.getItem().getTrace());
+					}
+				});
 			});
 
 			final MenuItem showDescriptionItem = new MenuItem(i18n.translate("animation.tracereplay.view.contextMenu.showDescription"));
 			showDescriptionItem.setOnAction(event -> showDescription(this.getItem()));
 
 			final MenuItem openInExternalEditorItem = new MenuItem(i18n.translate("animation.tracereplay.view.contextMenu.openInExternalEditor"));
-			openInExternalEditorItem.setOnAction(event -> injector.getInstance(ExternalEditor.class).open(this.getItem().getAbsoluteLocation()));
+			openInExternalEditorItem.setOnAction(event -> injector.getInstance(ExternalEditor.class).open(currentProject.get().resolveProjectPath(this.getItem().getLocation())));
 
 			final MenuItem revealInExplorerItem = new MenuItem(i18n.translate("animation.tracereplay.view.contextMenu.revealInExplorer"));
-			revealInExplorerItem.setOnAction(event -> injector.getInstance(RevealInExplorer.class).revealInExplorer(this.getItem().getAbsoluteLocation()));
+			revealInExplorerItem.setOnAction(event -> injector.getInstance(RevealInExplorer.class).revealInExplorer(currentProject.get().resolveProjectPath(this.getItem().getLocation())));
 
 			contextMenu.getItems().addAll(addTestsItem, showStatusItem, new SeparatorMenuItem(), showDescriptionItem, removeMenuItem, new SeparatorMenuItem(), openInExternalEditorItem, revealInExplorerItem);
 		}
@@ -104,14 +120,11 @@ public final class TraceReplayView extends CheckingViewBase<ReplayTrace> {
 	private final StageManager stageManager;
 	private final CurrentProject currentProject;
 	private final CurrentTrace currentTrace;
-	private final TraceChecker traceChecker;
 	private final I18n i18n;
 	private final FileChooserManager fileChooserManager;
 	private final Injector injector;
 	private final TraceFileHandler traceFileHandler;
 
-	@FXML
-	private TableColumn<ReplayTrace, Node> statusProgressColumn;
 	@FXML
 	private TableColumn<ReplayTrace, String> stepsColumn;
 	@FXML
@@ -124,13 +137,12 @@ public final class TraceReplayView extends CheckingViewBase<ReplayTrace> {
 
 	@Inject
 	private TraceReplayView(final StageManager stageManager, final CurrentProject currentProject, final DisablePropertyController disablePropertyController,
-	                        final CurrentTrace currentTrace, final CliTaskExecutor cliExecutor, final TraceChecker traceChecker, final I18n i18n,
+	                        final CurrentTrace currentTrace, final CheckingExecutors checkingExecutors, final I18n i18n,
 	                        final FileChooserManager fileChooserManager, final Injector injector, final TraceFileHandler traceFileHandler) {
-		super(i18n, disablePropertyController, currentTrace, currentProject, cliExecutor);
+		super(stageManager, i18n, disablePropertyController, currentTrace, currentProject, checkingExecutors);
 		this.stageManager = stageManager;
 		this.currentProject = currentProject;
 		this.currentTrace = currentTrace;
-		this.traceChecker = traceChecker;
 		this.i18n = i18n;
 		this.fileChooserManager = fileChooserManager;
 		this.injector = injector;
@@ -139,57 +151,34 @@ public final class TraceReplayView extends CheckingViewBase<ReplayTrace> {
 	}
 
 	@Override
+	protected ObservableList<ReplayTrace> getItemsProperty(Machine machine) {
+		return machine.getTraces();
+	}
+
+	@Override
 	@FXML
 	public void initialize() {
 		super.initialize();
 		helpButton.setHelpContent("animation", "Trace");
 
-		final ChangeListener<Machine> machineChangeListener = (observable, from, to) -> {
-			items.unbind();
-			if (to != null) {
-				items.bind(to.getMachineProperties().tracesProperty());
-			} else {
-				items.set(FXCollections.observableArrayList());
-			}
-		};
-		currentProject.currentMachineProperty().addListener(machineChangeListener);
-		machineChangeListener.changed(null, null, currentProject.getCurrentMachine());
-
-		statusProgressColumn.setCellValueFactory(features -> {
-			final ReplayTrace trace = features.getValue();
-
-			final CheckedIcon statusIcon = new CheckedIcon();
-			statusIcon.bindableFontSizeProperty().bind(injector.getInstance(FontSize.class).fontSizeProperty());
-			trace.checkedProperty().addListener((o, from, to) -> Platform.runLater(() -> statusIcon.setChecked(to)));
-			statusIcon.setChecked(trace.getChecked());
-
-			final ProgressIndicator replayProgress = new ProgressBar();
-			replayProgress.progressProperty().bind(trace.progressProperty());
-
-			return Bindings.when(trace.progressProperty().isEqualTo(-1))
-				       .<Node>then(statusIcon)
-				       .otherwise(replayProgress);
-		});
-
 		stepsColumn.setCellValueFactory(features -> {
 			ReplayTrace trace = features.getValue();
-			TraceJsonFile traceFile = trace.getLoadedTrace();
-			if (traceFile == null) {
-				try {
-					traceFile = trace.load();
-				} catch (IOException ignore) {
-					// ignore errors, so the user does not get bombarded with errors on startup
+			return Bindings.createStringBinding(() -> {
+				TraceJsonFile traceFile = trace.getLoadedTrace();
+				if (traceFile == null) {
+					try {
+						traceFile = traceFileHandler.loadJson(trace);
+					} catch (IOException ignore) {
+						// ignore errors, so the user does not get bombarded with errors on startup
+					}
 				}
-			}
 
-			String steps;
-			if (traceFile != null) {
-				steps = String.valueOf(traceFile.getTransitionList().size());
-			} else {
-				steps = i18n.translate("common.notAvailable");
-			}
-
-			return new SimpleStringProperty(steps);
+				if (traceFile != null) {
+					return String.valueOf(traceFile.getTransitionList().size());
+				} else {
+					return i18n.translate("common.notAvailable");
+				}
+			}, trace.loadedTraceProperty());
 		});
 
 		itemsTable.setRowFactory(table -> new Row());
@@ -207,14 +196,17 @@ public final class TraceReplayView extends CheckingViewBase<ReplayTrace> {
 	}
 
 	@Override
-	protected String configurationForItem(final ReplayTrace item) {
-		return item.getName();
-	}
-
-	@Override
-	protected void executeItemSync(final ReplayTrace item, final ExecutionContext context) {
-		// FIXME Respect execution context
-		traceChecker.check(item);
+	protected CompletableFuture<?> executeItemImpl(ReplayTrace item, CheckingExecutors executors, ExecutionContext context) {
+		return super.executeItemImpl(item, executors, context).thenCompose(res ->
+			traceFileHandler.askKeepReplayedTrace(item)
+		).thenApply(trace -> {
+			trace.ifPresent(currentTrace::set);
+			return null;
+		}).exceptionally(exc -> {
+			Platform.runLater(() -> traceFileHandler.showLoadError(item, exc));
+			// Do not pass on the exception - otherwise the default exception handling in CheckingViewBase will display the same exception again.
+			return null;
+		});
 	}
 
 	@Override
@@ -275,8 +267,8 @@ public final class TraceReplayView extends CheckingViewBase<ReplayTrace> {
 		if (directory != null) {
 			try (Stream<Path> walk = Files.walk(directory)) {
 				paths = walk.filter(Files::isRegularFile)
-					        .filter(p -> MoreFiles.getFileExtension(p).equals(TraceFileHandler.TRACE_FILE_EXTENSION))
-					        .collect(Collectors.toList());
+						        .filter(p -> MoreFiles.getFileExtension(p).equals(TraceFileHandler.TRACE_FILE_EXTENSION))
+						        .toList();
 			} catch (IOException e) {
 				final Alert alert = stageManager.makeExceptionAlert(e, "animation.tracereplay.alerts.traceDirectoryError.header", "animation.tracereplay.alerts.traceDirectoryError.error");
 				alert.initOwner(this.getScene().getWindow());
@@ -289,8 +281,13 @@ public final class TraceReplayView extends CheckingViewBase<ReplayTrace> {
 	}
 
 	@Override
+	protected ReplayTrace addItem(ReplayTrace newItem) {
+		return this.traceFileHandler.addReplayTraceWithChecks(this.currentProject.getCurrentMachine(), newItem);
+	}
+
+	@Override
 	protected void removeItem(ReplayTrace item) {
 		super.removeItem(item);
-		traceFileHandler.deleteTraceFile(item);
+		this.traceFileHandler.deleteTraceFile(item);
 	}
 }
