@@ -1,35 +1,34 @@
 package de.prob2.ui.internal;
 
 import java.time.Duration;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.EnumMap;
+import java.util.HashSet;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Predicate;
 import java.util.function.UnaryOperator;
 import java.util.stream.Collectors;
 
+import com.google.common.base.Stopwatch;
 import com.google.inject.Inject;
 
 import de.prob.animator.domainobjects.ErrorItem;
 import de.prob2.ui.codecompletion.CodeCompletionItem;
 import de.prob2.ui.codecompletion.ParentWithEditableText;
+import de.prob2.ui.internal.executor.BackgroundUpdater;
 import de.prob2.ui.layout.FontSize;
 
+import javafx.application.Platform;
 import javafx.beans.binding.Bindings;
 import javafx.beans.property.SimpleObjectProperty;
 import javafx.beans.value.ObservableValue;
 import javafx.collections.FXCollections;
 import javafx.collections.ListChangeListener;
 import javafx.collections.ObservableList;
-import javafx.concurrent.Task;
 import javafx.geometry.Bounds;
 import javafx.geometry.Point2D;
 import javafx.scene.control.ContextMenu;
@@ -42,6 +41,8 @@ import javafx.util.Builder;
 import org.fxmisc.richtext.CodeArea;
 import org.fxmisc.richtext.LineNumberFactory;
 import org.fxmisc.richtext.event.MouseOverTextEvent;
+import org.fxmisc.richtext.model.Paragraph;
+import org.fxmisc.richtext.model.StyleSpan;
 import org.fxmisc.richtext.model.StyleSpans;
 import org.fxmisc.richtext.model.StyleSpansBuilder;
 import org.slf4j.Logger;
@@ -53,16 +54,15 @@ import org.slf4j.LoggerFactory;
 @FXMLInjected
 public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeArea> {
 
-	protected static final Map<ErrorItem.Type, String> ERROR_STYLE_CLASSES;
 	private static final Logger LOGGER = LoggerFactory.getLogger(ExtendedCodeArea.class);
-
-	static {
-		final Map<ErrorItem.Type, String> errorStyleClasses = new EnumMap<>(ErrorItem.Type.class);
-		errorStyleClasses.put(ErrorItem.Type.WARNING, "warning");
-		errorStyleClasses.put(ErrorItem.Type.ERROR, "error");
-		errorStyleClasses.put(ErrorItem.Type.INTERNAL_ERROR, "error");
-		ERROR_STYLE_CLASSES = Collections.unmodifiableMap(errorStyleClasses);
-	}
+	protected static final Map<ErrorItem.Type, String> ERROR_STYLE_CLASSES = Map.of(
+			ErrorItem.Type.MESSAGE, "message",
+			ErrorItem.Type.WARNING, "warning",
+			ErrorItem.Type.ERROR, "error",
+			ErrorItem.Type.INTERNAL_ERROR, "error"
+	);
+	private static final int MAX_TEXT_LENGTH_FOR_STYLING = 100_000;
+	private static final int MAX_PAR_LENGTH_FOR_STYLING = 100_000;
 
 	protected final FontSize fontSize;
 	protected final I18n i18n;
@@ -71,15 +71,18 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 	protected final Label errorPopupLabel;
 	protected final SimpleObjectProperty<ErrorItem.Location> errorHighlight;
 	protected final SimpleObjectProperty<ErrorItem.Location> searchResult;
-	private final ExecutorService executor;
+	private final BackgroundUpdater executor;
 	private final ObservableValue<Optional<Point2D>> caretPos;
 	private final ObservableValue<Optional<String>> textBeforeCaret;
+	private final AtomicBoolean changingText;
+
+	private boolean showLongTextWarning = true;
 
 	@Inject
 	public ExtendedCodeArea(FontSize fontSize, I18n i18n, StopActions stopActions) {
 		this.fontSize = fontSize;
 		this.i18n = i18n;
-		this.executor = Executors.newSingleThreadExecutor();
+		this.executor = new BackgroundUpdater("ExtendedCodeArea Highlighting Updater");
 		stopActions.add(this.executor::shutdownNow);
 
 		this.errors = FXCollections.observableArrayList();
@@ -91,12 +94,12 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 		this.searchResult = new SimpleObjectProperty<>(null, "searchResult", null);
 
 		this.caretPos = Bindings.createObjectBinding(
-				() -> this.caretBoundsProperty().getValue()
-						      .map(bounds -> new Point2D(
-								      (bounds.getMinX() + bounds.getMaxX()) / 2.0,
-								      bounds.getMaxY()
-						      )),
-				this.caretBoundsProperty()
+			() -> this.caretBoundsProperty().getValue()
+				.map(bounds -> new Point2D(
+					(bounds.getMinX() + bounds.getMaxX()) / 2.0,
+					bounds.getMaxY()
+				)),
+			this.caretBoundsProperty()
 		);
 		this.textBeforeCaret = Bindings.createObjectBinding(() -> {
 			int caret = this.getCaretPosition();
@@ -107,16 +110,26 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 			}
 		}, this.textProperty(), this.caretPositionProperty());
 
+		this.changingText = new AtomicBoolean();
+
 		initialize();
 	}
 
-	protected static <T> Collection<T> combineCollections(final Collection<? extends T> a, final Collection<? extends T> b) {
-		final Collection<T> ret = new ArrayList<>(a);
-		ret.addAll(b);
-		return ret;
+	protected static Collection<String> combineStyleSpans(final Collection<String> a, final Collection<String> b) {
+		// we want to save memory here!
+		if (b.isEmpty() || a.equals(b)) {
+			return a;
+		} else if (a.isEmpty()) {
+			return b;
+		} else {
+			HashSet<String> coll = new HashSet<>(a);
+			coll.addAll(b);
+			return coll;
+		}
 	}
 
 	private void initialize() {
+		this.getStyleClass().add("extended-code-area");
 		this.getStyleClass().add("editor");
 		styleProperty().bind(Bindings.format(Locale.ROOT, "-fx-font-size: %dpx;", fontSize.fontSizeProperty()));
 		this.errorPopupLabel.getStyleClass().add("editorPopupLabel");
@@ -125,20 +138,7 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 			this.setParagraphGraphicFactory(LineNumberFactory.get(this));
 		}
 
-		this.multiPlainChanges()
-				.successionEnds(Duration.ofMillis(50))
-				.retainLatestUntilLater(this.executor)
-				.supplyTask(this::computeHighlightingAsync)
-				.awaitLatest(this.multiPlainChanges())
-				.filterMap(t -> {
-					if (t.isSuccess()) {
-						return Optional.of(t.get());
-					} else {
-						LOGGER.warn("Highlighting failed", t.getFailure());
-						return Optional.empty();
-					}
-				})
-				.subscribe(this::applyHighlighting);
+		this.multiPlainChanges().subscribe(e -> this.reloadHighlighting());
 		this.errors.addListener((ListChangeListener<ErrorItem>) change -> {
 			if (this.errors.isEmpty()) {
 				this.setErrorHighlight(null);
@@ -153,28 +153,27 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 		this.addEventHandler(MouseOverTextEvent.MOUSE_OVER_TEXT_BEGIN, e -> {
 			// Inefficient, but works - there should never be so many errors that the iteration has a noticeable performance impact.
 			final String errorsText = this.getErrors().stream()
-					                          .filter(error ->
-							                                  error.getLocations().stream()
-									                                  .anyMatch(
-											                                  location -> e.getCharacterIndex() >= this.errorLocationAbsoluteStart(location)
-													                                              && e.getCharacterIndex() <= this.errorLocationAbsoluteEnd(location)
-									                                  )
-					                          )
-					                          .map(ErrorItem::getMessage)
-					                          .collect(Collectors.joining("\n"));
+				.filter(error ->
+					error.getLocations().stream().anyMatch(location ->
+						e.getCharacterIndex() >= this.errorLocationAbsoluteStart(location)
+						&& e.getCharacterIndex() <= this.errorLocationAbsoluteEnd(location)
+					)
+				)
+				.map(ErrorItem::getMessage)
+				.collect(Collectors.joining("\n"));
 			if (!errorsText.isEmpty()) {
 				this.errorPopupLabel.setText(errorsText);
 				// Try to position the popup under the text being hovered over,
 				// so that the line in question is not covered by the popup.
 				final double popupY = this.getCharacterBoundsOnScreen(e.getCharacterIndex(), e.getCharacterIndex() + 1)
-						                      .map(Bounds::getMaxY)
-						                      .orElse(e.getScreenPosition().getY());
+					.map(Bounds::getMaxY)
+					.orElse(e.getScreenPosition().getY());
 				this.errorPopup.show(this, e.getScreenPosition().getX(), popupY);
 			}
 		});
 		this.addEventHandler(MouseOverTextEvent.MOUSE_OVER_TEXT_END, e -> this.errorPopup.hide());
 
-		initializeContextMenu();
+		this.initializeContextMenu();
 	}
 
 	protected boolean showLineNumbers() {
@@ -185,15 +184,30 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 		final ContextMenu contextMenu = new ContextMenu();
 
 		final MenuItem undoItem = new MenuItem(i18n.translate("common.contextMenu.undo"));
-		undoItem.setOnAction(e -> this.getUndoManager().undo());
+		undoItem.setOnAction(e -> {
+			if (this.isEditable()) {
+				this.getUndoManager().undo();
+			}
+		});
+		undoItem.disableProperty().bind(this.editableProperty().not());
 		contextMenu.getItems().add(undoItem);
 
 		final MenuItem redoItem = new MenuItem(i18n.translate("common.contextMenu.redo"));
-		redoItem.setOnAction(e -> this.getUndoManager().redo());
+		redoItem.setOnAction(e -> {
+			if (this.isEditable()) {
+				this.getUndoManager().redo();
+			}
+		});
+		redoItem.disableProperty().bind(this.editableProperty().not());
 		contextMenu.getItems().add(redoItem);
 
 		final MenuItem cutItem = new MenuItem(i18n.translate("common.contextMenu.cut"));
-		cutItem.setOnAction(e -> this.cut());
+		cutItem.setOnAction(e -> {
+			if (this.isEditable()) {
+				this.cut();
+			}
+		});
+		cutItem.disableProperty().bind(this.editableProperty().not());
 		contextMenu.getItems().add(cutItem);
 
 		final MenuItem copyItem = new MenuItem(i18n.translate("common.contextMenu.copy"));
@@ -201,11 +215,21 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 		contextMenu.getItems().add(copyItem);
 
 		final MenuItem pasteItem = new MenuItem(i18n.translate("common.contextMenu.paste"));
-		pasteItem.setOnAction(e -> this.paste());
+		pasteItem.setOnAction(e -> {
+			if (this.isEditable()) {
+				this.paste();
+			}
+		});
+		pasteItem.disableProperty().bind(this.editableProperty().not());
 		contextMenu.getItems().add(pasteItem);
 
 		final MenuItem deleteItem = new MenuItem(i18n.translate("common.contextMenu.delete"));
-		deleteItem.setOnAction(e -> this.deleteText(this.getSelection()));
+		deleteItem.setOnAction(e -> {
+			if (this.isEditable()) {
+				this.deleteText(this.getSelection());
+			}
+		});
+		deleteItem.disableProperty().bind(this.editableProperty().not());
 		contextMenu.getItems().add(deleteItem);
 
 		final MenuItem selectAllItem = new MenuItem(i18n.translate("common.contextMenu.selectAll"));
@@ -253,17 +277,17 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 		if (location.getStartLine() > location.getEndLine()) {
 			throw new IllegalArgumentException("line");
 		} else if (location.getStartLine() == location.getEndLine()
-				           && location.getStartColumn() > location.getEndColumn()) {
+				&& location.getStartColumn() > location.getEndColumn()) {
 			throw new IllegalArgumentException("column");
 		}
 
 		int displayedStartColumn;
 		if (
-				location.getStartLine() == location.getEndLine()
-						&& location.getStartColumn() == location.getEndColumn()
-						&& location.getStartLine() >= 1
-						&& location.getStartLine() <= this.getParagraphs().size()
-						&& location.getStartColumn() >= this.getParagraphLength(location.getStartLine() - 1)
+			location.getStartLine() == location.getEndLine()
+				&& location.getStartColumn() == location.getEndColumn()
+				&& location.getStartLine() >= 1
+				&& location.getStartLine() <= this.getParagraphs().size()
+				&& location.getStartColumn() >= this.getParagraphLength(location.getStartLine() - 1)
 		) {
 			// the styling cannot be displayed on substrings with length 0
 			// thus - when we detect a location with length 0 - we extend it to length 1 to the right
@@ -274,19 +298,19 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 		}
 
 		return this.getClampedAbsolutePosition(
-				location.getStartLine() - 1,
-				displayedStartColumn
+			location.getStartLine() - 1,
+			displayedStartColumn
 		);
 	}
 
 	private int errorLocationAbsoluteEnd(final ErrorItem.Location location) {
 		int displayedEndColumn;
 		if (
-				location.getStartLine() == location.getEndLine()
-						&& location.getStartColumn() == location.getEndColumn()
-						&& location.getEndLine() >= 1
-						&& location.getEndLine() <= this.getParagraphs().size()
-						&& location.getEndColumn() < this.getParagraphLength(location.getStartLine() - 1)
+			location.getStartLine() == location.getEndLine()
+				&& location.getStartColumn() == location.getEndColumn()
+				&& location.getEndLine() >= 1
+				&& location.getEndLine() <= this.getParagraphs().size()
+				&& location.getEndColumn() < this.getParagraphLength(location.getStartLine() - 1)
 		) {
 			// the styling cannot be displayed on substrings with length 0
 			// thus - when we detect a location with length 0 - we extend it to length 1 to the right
@@ -297,16 +321,16 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 		}
 
 		return this.getClampedAbsolutePosition(
-				location.getEndLine() - 1,
-				displayedEndColumn
+			location.getEndLine() - 1,
+			displayedEndColumn
 		);
 	}
 
 	public void jumpToErrorSource(ErrorItem.Location errorLocation) {
 		this.setErrorHighlight(errorLocation);
 		this.moveTo(this.getClampedAbsolutePosition(
-				errorLocation.getStartLine() - 1,
-				errorLocation.getStartColumn()
+			errorLocation.getStartLine() - 1,
+			errorLocation.getStartColumn()
 		));
 		this.requestFollowCaret();
 	}
@@ -317,12 +341,14 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 				int startIndex = this.errorLocationAbsoluteStart(location);
 				int endIndex = this.errorLocationAbsoluteEnd(location);
 				if (endIndex > startIndex) {
+					String errorStyleClass = ERROR_STYLE_CLASSES.getOrDefault(error.getType(), "message");
+
 					highlighting = highlighting.overlay(
-							new StyleSpansBuilder<Collection<String>>()
-									.add(Collections.emptySet(), startIndex)
-									.add(Arrays.asList("problem", ERROR_STYLE_CLASSES.get(error.getType())), endIndex - startIndex)
-									.create(),
-							ExtendedCodeArea::combineCollections
+						new StyleSpansBuilder<Collection<String>>()
+								.add(Set.of(), startIndex)
+								.add(Set.of("problem", errorStyleClass), endIndex - startIndex)
+							.create(),
+							ExtendedCodeArea::combineStyleSpans
 					);
 				}
 			}
@@ -333,11 +359,11 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 			int endIndex = this.errorLocationAbsoluteEnd(errorHighlight.get());
 			if (endIndex > startIndex) {
 				highlighting = highlighting.overlay(
-						new StyleSpansBuilder<Collection<String>>()
-								.add(Collections.emptySet(), startIndex)
-								.add(Collections.singletonList("errorTable"), endIndex - startIndex)
-								.create(),
-						ExtendedCodeArea::combineCollections
+					new StyleSpansBuilder<Collection<String>>()
+							.add(Set.of(), startIndex)
+							.add(Set.of("errorTable"), endIndex - startIndex)
+						.create(),
+						ExtendedCodeArea::combineStyleSpans
 				);
 			}
 		}
@@ -347,8 +373,8 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 
 	public void jumpToSearchResult(ErrorItem.Location searchResultLocation) {
 		this.moveTo(this.getClampedAbsolutePosition(
-				searchResultLocation.getEndLine() - 1,
-				searchResultLocation.getEndColumn()
+			searchResultLocation.getEndLine() - 1,
+			searchResultLocation.getEndColumn()
 		));
 		this.requestFollowCaret();
 		this.setSearchResult(searchResultLocation);
@@ -360,11 +386,11 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 			int endIndex = this.errorLocationAbsoluteEnd(searchResult.get());
 			if (endIndex > startIndex) {
 				highlighting = highlighting.overlay(
-						new StyleSpansBuilder<Collection<String>>()
-								.add(Collections.emptySet(), startIndex)
-								.add(Collections.singletonList("searchResult"), endIndex - startIndex)
-								.create(),
-						ExtendedCodeArea::combineCollections
+					new StyleSpansBuilder<Collection<String>>()
+							.add(Set.of(), startIndex)
+							.add(Set.of("searchResult"), endIndex - startIndex)
+						.create(),
+						ExtendedCodeArea::combineStyleSpans
 				);
 			}
 		}
@@ -372,32 +398,74 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 		return highlighting;
 	}
 
-	private void applyHighlighting(StyleSpans<Collection<String>> highlighting) {
-		this.setStyleSpans(0, highlighting);
-	}
-
-	private Task<StyleSpans<Collection<String>>> computeHighlightingAsync() {
-		final String text = this.getText();
-		final Task<StyleSpans<Collection<String>>> task = new Task<>() {
-
-			@Override
-			protected StyleSpans<Collection<String>> call() {
-				return computeHighlighting(text);
+	private boolean checkTextLengthForStyling() {
+		int length = this.getLength();
+		// first check if text is too long, then if there are too long paragraphs (otherwise long text with short pars is ok(?))
+		if (length >= MAX_TEXT_LENGTH_FOR_STYLING) {
+			int maxParLength = this.getParagraphs().stream().mapToInt(Paragraph::length).max().orElse(0);
+			if (maxParLength >= MAX_PAR_LENGTH_FOR_STYLING) {
+				if (this.showLongTextWarning) {
+					LOGGER.warn("Disabling styling in text area, paragraph/text is too long ({}/{})", maxParLength, length);
+					this.showLongTextWarning = false;
+				}
+				return false;
 			}
-		};
-		executor.execute(task);
-		return task;
+		}
+
+		return true;
 	}
 
 	protected StyleSpans<Collection<String>> computeHighlighting(String text) {
-		StyleSpans<Collection<String>> highlighting = StyleSpans.singleton(Collections.emptySet(), text.length());
+		StyleSpans<Collection<String>> highlighting = StyleSpans.singleton(Set.of(), text.length());
 		highlighting = addErrorHighlighting(highlighting);
 		highlighting = addSearchHighlighting(highlighting);
 		return highlighting;
 	}
 
+	public void reloadHighlighting() {
+		String text = this.getText();
+		if (!this.checkTextLengthForStyling()) {
+			this.setStyleSpans(0, StyleSpans.singleton(new StyleSpan<>(Set.of(), text.length())));
+			return;
+		}
+
+		this.executor.execute(() -> {
+			try {
+				// let the highlighting thread sleep for a bit, so we do not rapid fire updates when typing a lot
+				Thread.sleep(50);
+			} catch (InterruptedException ignored) {
+				return;
+			}
+
+			Stopwatch sw = Stopwatch.createStarted();
+			var spans = this.computeHighlighting(text);
+			if (spans == null || Thread.currentThread().isInterrupted()) {
+				return;
+			}
+			LOGGER.trace("Computing highlighting for text of length {} took {}", text.length(), sw.stop());
+
+			Platform.runLater(() -> {
+				// sanity check: did the text length change?
+				if (this.getLength() == text.length()) {
+					Stopwatch sw_ = Stopwatch.createStarted();
+					try {
+						this.setStyleSpans(0, spans);
+						LOGGER.trace("Applying {} highlighting style spans took {}", spans.getSpanCount(), sw_.stop());
+					} catch (Exception exc) {
+						LOGGER.warn("Could not apply highlighting style spans", exc);
+					}
+				}
+			});
+		});
+	}
+
+	public void cancelHighlighting() {
+		this.executor.cancel(true);
+	}
+
 	public void clearHistory() {
 		this.getUndoManager().forgetHistory();
+		this.getUndoManager().mark();
 	}
 
 	public ObservableList<ErrorItem> getErrors() {
@@ -410,10 +478,6 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 
 	public void setSearchResult(ErrorItem.Location searchResultLocation) {
 		this.searchResult.set(searchResultLocation);
-	}
-
-	public void reloadHighlighting() {
-		this.applyHighlighting(computeHighlighting(this.getText()));
 	}
 
 	@Override
@@ -429,7 +493,18 @@ public class ExtendedCodeArea extends CodeArea implements Builder<ExtendedCodeAr
 		return textBeforeCaret;
 	}
 
-	protected abstract class AbstractParentWithEditableText<T extends CodeCompletionItem> implements ParentWithEditableText<T> {
+	public boolean isChangingText() {
+		return this.changingText.get();
+	}
+
+	public void setChangingText(boolean changingText) {
+		this.changingText.set(changingText);
+		if (changingText) {
+			this.showLongTextWarning = true;
+		}
+	}
+
+	public abstract class AbstractParentWithEditableText<T extends CodeCompletionItem> implements ParentWithEditableText<T> {
 
 		@Override
 		public Window getWindow() {
