@@ -1,54 +1,69 @@
 package de.prob2.ui.rulevalidation.ui;
 
+import java.io.IOException;
+import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Set;
+
 import com.google.inject.Inject;
 import com.google.inject.Injector;
 import com.google.inject.Singleton;
+
 import de.be4.classicalb.core.parser.rules.AbstractOperation;
 import de.be4.classicalb.core.parser.rules.ComputationOperation;
 import de.be4.classicalb.core.parser.rules.RuleOperation;
+import de.prob.animator.domainobjects.DotVisualizationCommand;
 import de.prob.animator.domainobjects.EvaluationException;
 import de.prob.exception.ProBError;
 import de.prob.model.brules.RuleResult;
-import de.prob.model.brules.RulesModel;
 import de.prob2.ui.config.FileChooserManager;
-import de.prob2.ui.dynamic.dotty.DotView;
+import de.prob2.ui.dynamic.DynamicVisualizationStage;
 import de.prob2.ui.internal.FXMLInjected;
 import de.prob2.ui.internal.I18n;
 import de.prob2.ui.internal.StageManager;
-import de.prob2.ui.internal.VersionInfo;
 import de.prob2.ui.prob2fx.CurrentTrace;
-import de.prob2.ui.rulevalidation.RuleValidationReport;
 import de.prob2.ui.rulevalidation.RulesController;
 import de.prob2.ui.rulevalidation.RulesDataModel;
-import de.prob2.ui.rulevalidation.RulesDependencyGraphCreator;
+
 import javafx.beans.binding.Bindings;
 import javafx.beans.property.ReadOnlyObjectWrapper;
 import javafx.collections.ListChangeListener;
 import javafx.fxml.FXML;
 import javafx.scene.Node;
-import javafx.scene.control.*;
+import javafx.scene.control.Alert;
+import javafx.scene.control.Button;
+import javafx.scene.control.CheckBox;
+import javafx.scene.control.ContextMenu;
+import javafx.scene.control.Label;
+import javafx.scene.control.MenuItem;
+import javafx.scene.control.ProgressBar;
+import javafx.scene.control.ScrollPane;
+import javafx.scene.control.TextField;
+import javafx.scene.control.ToggleButton;
+import javafx.scene.control.TreeItem;
+import javafx.scene.control.TreeTableColumn;
+import javafx.scene.control.TreeTableRow;
+import javafx.scene.control.TreeTableView;
 import javafx.scene.layout.AnchorPane;
 import javafx.scene.layout.Pane;
 import javafx.scene.layout.VBox;
 import javafx.stage.FileChooser;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.IOException;
-import java.nio.file.Path;
-import java.util.*;
-
 /**
- * Description of class
- *
  * @author Christoph Heinzen
- * @version 0.1.0
  * @since 11.12.17
  */
 @FXMLInjected
 @Singleton
-public class RulesView extends AnchorPane{
-
+public final class RulesView extends AnchorPane {
 	private static final Logger LOGGER = LoggerFactory.getLogger(RulesView.class);
 
 	@FXML
@@ -171,23 +186,25 @@ public class RulesView extends AnchorPane{
 
 		treeTableView.setRowFactory(view -> initTableRow());
 
-		tvNameColumn.setCellFactory(column -> new NameCell());
+		tvNameColumn.setCellFactory(column -> new NameCell(i18n));
 		tvNameColumn.setCellValueFactory(param -> new ReadOnlyObjectWrapper<>(param.getValue().getValue()));
 
-		tvValueColumn.setCellFactory(column -> new ValueCell());
+		tvValueColumn.setCellFactory(column -> new ValueCell(i18n));
 		tvValueColumn.setCellValueFactory(param -> {
 			Object item = param.getValue().getValue();
-			if (item instanceof RuleOperation) {
-				return dataModel.getRuleValue(((RuleOperation) item).getName());
-			} else if (item instanceof ComputationOperation) {
-				return dataModel.getComputationValue(((ComputationOperation) item).getName());
+			if (item instanceof RuleOperation ruleItem) {
+				return dataModel.getRuleValue(ruleItem.getName());
+			} else if (item instanceof ComputationOperation compItem) {
+				return dataModel.getComputationValue(compItem.getName());
 			} else if (item instanceof RuleResult.CounterExample) {
 				return new ReadOnlyObjectWrapper<>(item);
-			} else if (item instanceof String) {
-				if (dataModel.getRuleValueMap().containsKey(item)) {
-					return dataModel.getRuleValue((String)item);
-				} else if (dataModel.getComputationValueMap().containsKey(item)) {
-					return dataModel.getComputationValue((String) item);
+			} else if (item instanceof RuleResult.SuccessMessage) {
+				return new ReadOnlyObjectWrapper<>(item);
+			} else if (item instanceof String stringItem) {
+				if (dataModel.getRuleValueMap().containsKey(stringItem)) {
+					return dataModel.getRuleValue(stringItem);
+				} else if (dataModel.getComputationValueMap().containsKey(stringItem)) {
+					return dataModel.getComputationValue(stringItem);
 				}
 			}
 			return null;
@@ -196,10 +213,10 @@ public class RulesView extends AnchorPane{
 		tvExecuteColumn.setCellFactory(column -> new ExecutionCell(controller, i18n));
 		tvExecuteColumn.setCellValueFactory(param -> {
 			Object item = param.getValue().getValue();
-			if (item instanceof RuleOperation) {
-				return dataModel.getRuleValue(((RuleOperation) item).getName());
-			} else if (item instanceof ComputationOperation) {
-				return dataModel.getComputationValue(((ComputationOperation) item).getName());
+			if (item instanceof RuleOperation ruleOperation) {
+				return dataModel.getRuleValue(ruleOperation.getName());
+			} else if (item instanceof ComputationOperation computationOperation) {
+				return dataModel.getComputationValue(computationOperation.getName());
 			}
 			return null;
 		});
@@ -223,7 +240,7 @@ public class RulesView extends AnchorPane{
 
 	private void filterTagsAndSearch() {
 		String filterText = filterTextField.getText();
-		LOGGER.debug("Filter Operations for tags " + currentTags + " and search '" + filterText + "'");
+		LOGGER.debug("Filter Operations for tags {} and search '{}'", currentTags, filterText);
 		clearTable();
 		List<TreeItem<Object>> filteredRuleItems;
 		List<TreeItem<Object>> filteredComputationItems;
@@ -248,6 +265,7 @@ public class RulesView extends AnchorPane{
 		for (TreeItem<Object> item : ruleItems) {
 			item.getChildren().clear();
 			if (item.getValue() instanceof String classification) {
+				classification = classification.substring(0, classification.lastIndexOf("(") - 1);
 				item.getChildren().addAll(classificationItems.get(classification));
 			}
 		}
@@ -320,9 +338,10 @@ public class RulesView extends AnchorPane{
 
 	@FXML
 	public void visualizeCompleteDependencyGraph() {
-		RulesModel rulesModel = (RulesModel) currentTrace.getModel();
-		RulesDependencyGraphCreator.visualizeGraph(injector.getInstance(DotView.class), currentTrace,
-			rulesModel.getRulesProject().getOperationsMap().values());
+		DynamicVisualizationStage expressionTableView = injector.getInstance(DynamicVisualizationStage.class);
+		expressionTableView.show();
+		expressionTableView.toFront();
+		expressionTableView.selectCommand(DotVisualizationCommand.RULE_DEPENDENCY_GRAPH_NAME);
 	}
 
 	@FXML
@@ -331,16 +350,15 @@ public class RulesView extends AnchorPane{
 		fileChooser.setTitle(i18n.translate("rulevalidation.view.save.title"));
 		fileChooser.setInitialFileName("ValidationReport.html");
 		fileChooser.getExtensionFilters().add(fileChooserManager.getExtensionFilter("common.fileChooser.fileTypes.html", "html"));
+		fileChooser.getExtensionFilters().add(fileChooserManager.getExtensionFilter("common.fileChooser.fileTypes.xml", "xml"));
 		Path path = this.fileChooserManager.showSaveFileChooser(fileChooser, FileChooserManager.Kind.VISUALISATIONS, stageManager.getCurrent());
 		if (path != null) {
-			RuleValidationReport ruleValidationReport = new RuleValidationReport(currentTrace, i18n,
-				injector.getInstance(VersionInfo.class), dataModel);
-			ruleValidationReport.reportVelocity(path);
+			controller.saveValidationReport(path, injector.getInstance(Locale.class));
 		}
 	}
 
-	public void clear(){
-		LOGGER.debug("Clear RulesView!");
+	public void clear() {
+		LOGGER.trace("Clear RulesView!");
 
 		tvRootItem.getChildren().clear();
 		filterTextField.setText("");
@@ -381,7 +399,7 @@ public class RulesView extends AnchorPane{
 			List<TreeItem<Object>> noClassificationItem = new ArrayList<>();
 			for (Map.Entry<String, RuleOperation> entry : dataModel.getRuleMap().entrySet()) {
 				LOGGER.debug("Add item for rule {}   {}.", entry.getKey(), entry.getValue());
-				TreeItem<Object> operationItem = new OperationItem(entry.getValue(), dataModel.getRuleValue(entry.getKey()), dataModel);
+				TreeItem<Object> operationItem = new OperationItem(i18n, entry.getValue(), dataModel.getRuleValue(entry.getKey()), dataModel);
 				String classification = entry.getValue().getClassification();
 				if (classification != null && classificationItems.containsKey(classification)) {
 					classificationItems.get(classification).add(operationItem);
@@ -393,20 +411,20 @@ public class RulesView extends AnchorPane{
 				}
 			}
 			for (String cl : classificationItems.keySet()) {
-				TreeItem<Object> classificationItem = new TreeItem<>(cl);
+				TreeItem<Object> classificationItem = new TreeItem<>(cl + " (" + classificationItems.get(cl).size() + ")");
 				classificationItem.getChildren().addAll(classificationItems.get(cl));
 				tvRulesItem.getChildren().add(classificationItem);
 			}
 			tvRulesItem.getChildren().addAll(noClassificationItem);
 			tvRootItem.getChildren().add(tvRulesItem);
-
 		}
+
 		tvComputationsItem = new TreeItem<>("COMPUTATIONS");
 		if (!dataModel.getComputationMap().isEmpty()) {
 			for (Map.Entry<String, ComputationOperation> entry : dataModel.getComputationMap().entrySet()) {
 				LOGGER.debug("Add item for computation {}.", entry.getKey());
 				tvComputationsItem.getChildren()
-						.add(new OperationItem(entry.getValue(), dataModel.getComputationValue(entry.getKey()), dataModel));
+						.add(new OperationItem(i18n, entry.getValue(), dataModel.getComputationValue(entry.getKey()), dataModel));
 			}
 			tvRootItem.getChildren().add(tvComputationsItem);
 		}
@@ -429,11 +447,14 @@ public class RulesView extends AnchorPane{
 		final TreeTableRow<Object> row = new TreeTableRow<>();
 
 		final MenuItem visualizeExpressionAsGraphItem = new MenuItem(
-			i18n.translate("rulevalidation.view.contextMenu.dependencyGraph"));
+			i18n.translate("rulevalidation.table.contextMenu.dependencyGraph"));
 		visualizeExpressionAsGraphItem.setOnAction(event -> {
 			try {
 				if (row.getItem() instanceof AbstractOperation abstractOperation) {
-					RulesDependencyGraphCreator.visualizeGraph(injector.getInstance(DotView.class), currentTrace, Collections.singleton(abstractOperation));
+					DynamicVisualizationStage dotView = injector.getInstance(DynamicVisualizationStage.class);
+					dotView.show();
+					dotView.toFront();
+					dotView.visualizeFormulaAsGraph(controller.getPartialDependencyGraphExpression(Set.of(abstractOperation)));
 				}
 			} catch (EvaluationException | ProBError e) {
 				LOGGER.error("Could not visualize formula", e);
@@ -447,4 +468,5 @@ public class RulesView extends AnchorPane{
 			row.setContextMenu(newVal instanceof AbstractOperation ? new ContextMenu(visualizeExpressionAsGraphItem) : null));
 		return row;
 	}
+
 }
